@@ -1,10 +1,13 @@
 2006-03-10 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* added logger module (forgot to commit before). 
-	* Fixed bug in read_history that crashed python if no .history file was available
+	* Fixed bug in read_history that crashed python if no .history file 
+	  was available
 	* added config option for history filename
 	* config option for history buffer length
 	* default value of history_name in new config file is .pythonhistory
-	  
+	* Prints error message to sys.stderr when there is some exception 
+	  raised in the configfile
+	
 2006-03-08 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* fixed release.py setup.py and eggsetup.py to include more metadata 
 	  useful for pypi.
